--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #a25050;
+  background: -webkit-linear-gradient(to right, #a25050, #c3a2d3);
+  background: linear-gradient(to right, #a25050, #c3a2d3);
+  min-height: 100vh;
+  padding-top: 2rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-gray {
+  color: #aaa;
 }
